<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/pokedexImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ash_login"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/pokemon_gb"
                android:text="@string/string_login_welcome_msg"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/pokedexLabel"
                app:layout_constraintEnd_toEndOf="@+id/pokedexLabel"
                app:layout_constraintStart_toStartOf="@+id/pokedexLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pokedexLabel"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/pokedex_login"
                app:layout_constraintEnd_toEndOf="@+id/txtInputUsername"
                app:layout_constraintStart_toStartOf="@+id/txtInputUsername"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/string_login_username"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/red"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokedexLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTxtInputUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="20"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_login"
                android:text="@string/string_login_button"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtInputUsername"
                app:layout_constraintStart_toStartOf="@+id/txtInputUsername" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pokemon_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
